{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 44,
  "lineage": "53b9d2b3-ab6e-6990-1605-b075f7a66ed4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ns_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f0fc85de381bd44",
            "arn": "arn:aws:ec2:us-east-1:616613574518:instance/i-09a0aecd86f7fe612",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a0aecd86f7fe612",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b71840374a17e0e6",
            "private_dns": "ip-10-0-1-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.182",
            "public_dns": "ec2-13-218-38-190.compute-1.amazonaws.com",
            "public_ip": "13.218.38.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-062f29d960aa62b70",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a79ac806fadb346d",
            "tags": {
              "Name": "NixacLabs-ServerInstance1"
            },
            "tags_all": {
              "Name": "NixacLabs-ServerInstance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0af4f7b4e6d8dc1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ns_lb_security_group",
            "aws_security_group.ns_public_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ns_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f0fc85de381bd44",
            "arn": "arn:aws:ec2:us-east-1:616613574518:instance/i-0b01e9feedd88e4a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b01e9feedd88e4a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0904a172d07cf8c5b",
            "private_dns": "ip-10-0-2-128.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.128",
            "public_dns": "ec2-18-232-132-132.compute-1.amazonaws.com",
            "public_ip": "18.232.132.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f8cee3ce92916a16",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058b66e9e6ac1efee",
            "tags": {
              "Name": "NixacLabs-ServerInstance2"
            },
            "tags_all": {
              "Name": "NixacLabs-ServerInstance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0af4f7b4e6d8dc1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ns_lb_security_group",
            "aws_security_group.ns_public_security_group",
            "aws_subnet.ns_public_subnet_2",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ns_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:internet-gateway/igw-038dda8d0cc116960",
            "id": "igw-038dda8d0cc116960",
            "owner_id": "616613574518",
            "tags": {
              "Name": "NixacLabs-IGW"
            },
            "tags_all": {
              "Name": "NixacLabs-IGW"
            },
            "vpc_id": "vpc-0f1aecc3e123d42d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ns_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:loadbalancer/app/ns-lb/8037130f4c9799bf",
            "arn_suffix": "app/ns-lb/8037130f4c9799bf",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ns-lb-936738607.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:loadbalancer/app/ns-lb/8037130f4c9799bf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ns-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07f2382a0c4a38b59"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-058b66e9e6ac1efee"
              },
              {
                "subnet_id": "subnet-0a79ac806fadb346d"
              }
            ],
            "subnets": [
              "subnet-058b66e9e6ac1efee",
              "subnet-0a79ac806fadb346d"
            ],
            "tags": {
              "Name": "Nixaclabs-LoadBalancer"
            },
            "tags_all": {
              "Name": "Nixaclabs-LoadBalancer"
            },
            "vpc_id": "vpc-0f1aecc3e123d42d5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ns_lb_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_subnet.ns_public_subnet_2",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ns_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:listener/app/ns-lb/8037130f4c9799bf/cb7a707e793c80cc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/b6a1b23a21e0eadc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:listener/app/ns-lb/8037130f4c9799bf/cb7a707e793c80cc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:loadbalancer/app/ns-lb/8037130f4c9799bf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.ns_lb",
            "aws_lb_target_group.ns_lb_target_group",
            "aws_security_group.ns_lb_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_subnet.ns_public_subnet_2",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ns_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/b6a1b23a21e0eadc",
            "arn_suffix": "targetgroup/ns-lb-target-group/b6a1b23a21e0eadc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/b6a1b23a21e0eadc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:616613574518:loadbalancer/app/ns-lb/8037130f4c9799bf"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ns-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "NS-LB-Target-Group"
            },
            "tags_all": {
              "Name": "NS-LB-Target-Group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f1aecc3e123d42d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ns_lb_target_group_attachment_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/b6a1b23a21e0eadc-20250612040449808900000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/b6a1b23a21e0eadc",
            "target_id": "i-09a0aecd86f7fe612"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.ns_instance_1",
            "aws_lb_target_group.ns_lb_target_group",
            "aws_security_group.ns_lb_security_group",
            "aws_security_group.ns_public_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ns_lb_target_group_attachment_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/b6a1b23a21e0eadc-20250612040450052100000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/b6a1b23a21e0eadc",
            "target_id": "i-0b01e9feedd88e4a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.ns_instance_2",
            "aws_lb_target_group.ns_lb_target_group",
            "aws_security_group.ns_lb_security_group",
            "aws_security_group.ns_public_security_group",
            "aws_subnet.ns_public_subnet_2",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ns_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:route-table/rtb-0ec04927213b77828",
            "id": "rtb-0ec04927213b77828",
            "owner_id": "616613574518",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038dda8d0cc116960",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f1aecc3e123d42d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ns_internet_gateway",
            "aws_vpc.ns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c066528849ebf506",
            "route_table_id": "rtb-0ec04927213b77828",
            "subnet_id": "subnet-0a79ac806fadb346d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ns_internet_gateway",
            "aws_route_table.ns_public_route_table",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef3931bc5009fb81",
            "route_table_id": "rtb-0ec04927213b77828",
            "subnet_id": "subnet-058b66e9e6ac1efee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ns_internet_gateway",
            "aws_route_table.ns_public_route_table",
            "aws_subnet.ns_public_subnet_2",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ns_lb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:security-group/sg-07f2382a0c4a38b59",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f2382a0c4a38b59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ns_lb_security_group",
            "name_prefix": "",
            "owner_id": "616613574518",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "NixacLabs-LB-Security-Group"
            },
            "tags_all": {
              "name": "NixacLabs-LB-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1aecc3e123d42d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ns_public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:security-group/sg-0a0af4f7b4e6d8dc1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0af4f7b4e6d8dc1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f2382a0c4a38b59"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ns_public_security_group",
            "name_prefix": "",
            "owner_id": "616613574518",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f1aecc3e123d42d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ns_lb_security_group",
            "aws_vpc.ns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ns_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:subnet/subnet-0a79ac806fadb346d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a79ac806fadb346d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616613574518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f1aecc3e123d42d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ns_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:subnet/subnet-058b66e9e6ac1efee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058b66e9e6ac1efee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616613574518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f1aecc3e123d42d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ns_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:vpc/vpc-0f1aecc3e123d42d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-022a39bfbce4f4ab0",
            "default_route_table_id": "rtb-056a632876feb475a",
            "default_security_group_id": "sg-08830495c1661f2ab",
            "dhcp_options_id": "dopt-04570ddac239d7c3e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f1aecc3e123d42d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-056a632876feb475a",
            "owner_id": "616613574518"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}